chore(theme): updates

--- a/src/patternfly/base/themes/dark/_variables.scss
+++ b/src/patternfly/base/themes/dark/_variables.scss
@@ -33,6 +33,8 @@
   --#{$pf-global}--active-color--100: #{$pf-v5-global--active-color--100};
   --#{$pf-global}--primary-color--100: #{$pf-v5-global--primary-color--100};
   --#{$pf-global}--primary-color--300: #{$pf-v5-global--primary-color--300};
+  --#{$pf-global}--primary-color--400: #{$pf-v5-global--primary-color--400};
+  --#{$pf-global}--custom-color--200: #{$pf-v5-global--custom-color--200};
   --#{$pf-global}--success-color--100: #{$pf-v5-global--success-color--100};
   --#{$pf-global}--warning-color--100: #{$pf-v5-global--warning-color--100};
   --#{$pf-global}--warning-color--200: #{$pf-v5-global--warning-color--200};
