--- a/src/patternfly/components/ToggleGroup/themes/dark/toggle-group.scss
+++ b/src/patternfly/components/ToggleGroup/themes/dark/toggle-group.scss
@@ -7,5 +7,6 @@
     --#{$toggle-group}__button--disabled--BackgroundColor: var(--#{$pf-global}--palette--black-600);
     --#{$toggle-group}__button--disabled--Color: var(--#{$pf-global}--palette--black-100);
     --#{$toggle-group}__button--m-selected--BackgroundColor: var(--#{$pf-global}--primary-color--300);
+    --#{$toggle-group}__button--m-selected--Color: var(--#{$pf-global}--primary-color--400);
   }
 }
