--- a/src/patternfly/components/CalendarMonth/themes/dark/calendar-month.scss
+++ b/src/patternfly/components/CalendarMonth/themes/dark/calendar-month.scss
@@ -4,6 +4,7 @@
   .#{$calendar-month} {
     --#{$calendar-month}__dates-cell--m-current__date--BackgroundColor: var(--#{$pf-global}--palette--black-500);
     --#{$calendar-month}__dates-cell--m-selected__date--BackgroundColor: var(--#{$pf-global}--primary-color--300);
+    --#{$calendar-month}__dates-cell--m-selected__date--Color: var(--#{$pf-global}--primary-color--400);
     --#{$calendar-month}__dates-cell--m-selected__date--hover--BackgroundColor: var(--#{$pf-global}--palette--black-900);
     --#{$calendar-month}__dates-cell--m-selected__date--focus--BackgroundColor: var(--#{$pf-global}--palette--blue-400);
     --#{$calendar-month}__dates-cell--m-in-range--before--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
@@ -26,6 +27,7 @@
       --#{$calendar-month}__date--after--BorderColor: var(--#{$pf-global}--active-color--100);
       --#{$calendar-month}__date--after--BorderWidth: var(--#{$pf-global}--BorderWidth--sm);
       --#{$calendar-month}__date--BackgroundColor: var(--#{$pf-global}--primary-color--300);
+      --#{$calendar-month}__date--Color: var(--#{$pf-global}--primary-color--400);
     }
   }
 }
