--- a/src/patternfly/components/Button/themes/dark/button.scss
+++ b/src/patternfly/components/Button/themes/dark/button.scss
@@ -24,6 +24,7 @@
     --#{$button}--m-danger--hover--Color: var(--#{$pf-global}--palette--black-900);
     --#{$button}--m-danger--focus--Color: var(--#{$pf-global}--palette--black-900);
     --#{$button}--m-danger--active--Color: var(--#{$pf-global}--palette--black-900);
+    --#{$button}--m-link--disabled--Color: var(--#{$pf-global}--disabled-color--100);
     --#{$button}--m-control--BackgroundColor: var(--#{$pf-global}--BackgroundColor--400);
     --#{$button}--m-control--hover--BackgroundColor: var(--#{$pf-global}--BackgroundColor--400);
     --#{$button}--m-control--active--BackgroundColor: var(--#{$pf-global}--BackgroundColor--400);
