--- a/src/patternfly/components/InputGroup/input-group-item.hbs
+++ b/src/patternfly/components/InputGroup/input-group-item.hbs
@@ -2,6 +2,7 @@
   {{#if input-group-item--IsBox}} pf-m-box{{/if}}
   {{#if input-group-item--IsPlain}} pf-m-plain{{/if}}
   {{#if input-group-item--IsFill}} pf-m-fill{{/if}}
+  {{#if input-group-item--IsDisabled}} pf-m-disabled{{/if}}
   {{#if input-group-item--modifier}} {{input-group-item--modifier}}{{/if}}"
   {{#if input-group-item--attribute}}
     {{{input-group-item--attribute}}}
