feat(icons): pf-icon -> pficon

--- a/src/patternfly/components/Form/form-group-label-help.hbs
+++ b/src/patternfly/components/Form/form-group-label-help.hbs
@@ -8,10 +8,10 @@
     {{{form-group-label-help--attribute}}}
   {{/if}}>
   {{#if form-label--HasHelpIcon}}
-    {{removeWhiteSpaceForPrettier}} <i class="pf-v5-c-icon pf-v5-c-icon-help" aria-hidden="true"></i>
+    {{removeWhiteSpaceForPrettier}} <i class="pf-v5-pficon pf-v5-pficon-help" aria-hidden="true"></i>
   {{else if @partial-block}}
     {{> @partial-block}}
   {{else}}
-    {{removeWhiteSpaceForPrettier}} <i class="pf-v5-c-icon pf-v5-c-icon-help" aria-hidden="true"></i>
+    {{removeWhiteSpaceForPrettier}} <i class="pf-v5-pficon pf-v5-pficon-help" aria-hidden="true"></i>
   {{/if}}
 {{removeWhiteSpaceForPrettier}} </span>
