--- a/src/patternfly/demos/Card/templates/card-template-expandable-status-card.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-expandable-status-card.hbs
@@ -12,7 +12,7 @@
                       {{#if card-template-expandable-status-card--label-icon}}
                         {{{card-template-expandable-status-card--label-icon}}}
                       {{else}}
-                        <i class="pf-v5-c-icon pf-v5-c-icon-port" aria-hidden="true"></i>
+                        <i class="pf-v5-pficon pf-v5-pficon-port" aria-hidden="true"></i>
                       {{/if}}
                     {{/label-icon}}
                     {{> label-text label-text--value=(ternary card-template-expandable-status-card--label-text card-template-expandable-status-card--label-text 'Performance')}}
@@ -51,10 +51,10 @@
           {{/if}}
           {{#> l-flex l-flex--modifier="pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"}}
             {{#if card-template-expandable-status-card--RequiresReboot}}
-              <i class="pf-v5-c-icon pf-v5-c-icon-on {{pfv 'u'}}danger-color-100" style="line-height: 1" aria-hidden="true"></i>
+              <i class="pf-v5-pficon pf-v5-pficon-on {{pfv 'u'}}danger-color-100" style="line-height: 1" aria-hidden="true"></i>
               <p class="{{pfv 'u'}}color-200">System reboot <b class="{{pfv 'u'}}color-100">is</b> required</p>
             {{else}}
-              <i class="pf-v5-c-icon pf-v5-c-icon-on {{pfv 'u'}}color-400" style="line-height: 1" aria-hidden="true"></i>
+              <i class="pf-v5-pficon pf-v5-pficon-on {{pfv 'u'}}color-400" style="line-height: 1" aria-hidden="true"></i>
               <p class="{{pfv 'u'}}color-200">System reboot <b class="{{pfv 'u'}}color-100">is not</b> required</p>
             {{/if}}
           {{/l-flex}}
