Combine Label and Label Group docs

--- a/src/patternfly/components/_all.scss
+++ b/src/patternfly/components/_all.scss
@@ -44,7 +44,7 @@
 @import "./InputGroup/input-group";
 @import "./JumpLinks/jump-links";
 @import "./Label/label";
-@import "./LabelGroup/label-group";
+@import "./Label/label-group";
 @import "./List/list";
 @import "./LogViewer/log-viewer";
 @import "./Login/login";
