feat(icons): updated examples

--- a/src/patternfly/components/ModalBox/modal-box-header-help.hbs
+++ b/src/patternfly/components/ModalBox/modal-box-header-help.hbs
@@ -3,6 +3,6 @@
     {{{modal-box-header-help--attribute}}}
   {{/if}}>
   {{#> button button--modifier="pf-m-plain" button--attribute='aria-label="Help"'}}
-      <i class="pf-v5-c-icon pf-v5-c-icon-help" aria-hidden="true"></i>
+      <i class="pf-v5-pficon pf-v5-pficon-help" aria-hidden="true"></i>
   {{/button}}
 </div>
