--- a/src/patternfly/components/Tabs/tabs-item-action.hbs
+++ b/src/patternfly/components/Tabs/tabs-item-action.hbs
@@ -5,7 +5,7 @@
   {{/if}}>
   {{#if tabs-item-action--IsHelp}}
     {{#> tabs-item-action-button tabs-item-action-button--aria-label=(concat "More info for " __tabs-item--text " label") tabs-item-action-button--IsDisabled=tabs-item-action--IsHelpDisabled}}
-      <i class="pf-v5-c-icon pf-v5-c-icon-help" aria-hidden="true"></i>
+      <i class="pf-v5-pficon pf-v5-pficon-help" aria-hidden="true"></i>
     {{/tabs-item-action-button}}
   {{/if}}
   {{#if tabs-item-action--IsClose}}
