chore(icons): typo

--- a/src/patternfly/sass-utilities/themes/dark/scss-variables.scss
+++ b/src/patternfly/sass-utilities/themes/dark/scss-variables.scss
@@ -49,7 +49,7 @@ $pf-v5-global--BackgroundColor--dark-200: $pf-v5-global--BackgroundColor--200;
 $pf-v5-global--BackgroundColor--dark-300: $pf-v5-global--BackgroundColor--300;
 $pf-v5-global--BackgroundColor--dark-400: $pf-v5-global--BackgroundColor--400;
 $pf-v5-global--icon--Color--light: $pf-v5-color-black-200;
-$pf-v5-global--icon--Color--dark: $pf-color-black-50;
+$pf-v5-global--icon--Color--dark: $pf-v5-color-black-50;
 
 // Shadows
 // small
