--- a/src/patternfly/components/Avatar/examples/Avatar.css
+++ b/src/patternfly/components/Avatar/examples/Avatar.css
@@ -1,3 +1,3 @@
 #ws-core-c-avatar-bordered---dark {
-  background: var(--#{$pf-global}--BackgroundColor--dark-100);
+  background: var(--pf-v5-global--BackgroundColor--dark-100);
 }
