--- a/src/patternfly/components/NotificationBadge/examples/NotificationBadge.css
+++ b/src/patternfly/components/NotificationBadge/examples/NotificationBadge.css
@@ -1,3 +1,3 @@
 .ws-core-c-notification-badge {
-  background: var(--#{$pf-global}--BackgroundColor--dark-100);
+  background: var(--pf-v5-global--BackgroundColor--dark-100);
 }
